--- a/index.html
+++ b/index.html
@@ -57,46 +57,50 @@
             <div class="div-1">
                 <button>Business</button>
                 <p>Craig Bator - 27 Dec 2020</p>
-                <h2>After all is said and done, more is done</h2>
+                <h2>After All Is Said And Done, More Is <br> Done</h2>
             </div>
 
             <div class="headline-group">
                 <div class="div-2">
                     <button>Business</button>
-                    <p>Craig Bator - 27 Dec 2020</p>
+                    <p>Craig Bator - 27 Dec <br> 2020</p>
                     <h3>They’re back! Kennedy Darling <br> Named To Return To</h3>
                 </div>
 
                 <div class="div-3">
                     <button>Business</button>
-                    <p>Craig Bator - 27 Dec 2020</p>
-                    <h3>Swiss authorities say Uber drivers should</h3>
+                    <p>Craig Bator - 27 Dec <br> 2020</p>
+                    <h3>Swiss Authorities Say Uber <br> Drivers Should</h3>
                 </div>
 
                 <div class="div-4">
-                    <div class="bus-div3">Business</div>
+                    <button>Business</button>
                     <p>Craig Bator - 27 Dec 2020</p>
-                    <h2>Tourism in Dubai is booming by international tourist</h2>
+                    <h2>Tourism In Dubai Is Booming By <br> International Tourist</h2>
                 </div>
             </div>
         </section>
 
         <section class="container-2">
-            <div class="header-2">
-                <div>
-                    <h3>Don't Miss</h3>
-                    <a href="">All</a>
-                    <a href="">Lifestyle</a>
-                    <a href="">Vogue</a>
-                    <a href="">Health & Fitness</a>
-                    <a href="">Travel</a>
-                    <a href="">Gadgets</a>
-                    <a href="">World</a>
-                    <a href="">More &caron; </a>
+            <div class="heads">
+                <div class="header-2">
+                    <span class="miss">
+                        <h3>Don't Miss</h3>
+                    </span>
+                    <span class="buttons">
+                        <button class="one">All</button>
+                        <button class="two">Lifestyle</button>
+                        <button class="three">Vogue</button>
+                        <button class="four">Health & Fitness</button>
+                        <button class="five">Travel</button>
+                        <button class="six">Gadgets</button>
+                        <button class="seven">World</button>
+                        <button class="eight">More &caron; </button>
+                    </span>
                 </div>
 
                 <div class="header-3">
-                    <a href="">Recent</a>
+                    <a href="" class="recent">Recent</a>
                     <a href="">Trending</a>
                     <a href="">Most Views</a>
                 </div>
