--- a/index.html
+++ b/index.html
@@ -105,7 +105,80 @@
                     <a href="">Most Views</a>
                 </div>
             </div>
+            <div class="bottom-grid">
+                <div class="img0">
+                    <div><img src="./assets/img0.png" alt=""></div>
+                    <small>Craig Bator - 27 Dec 2020</small>
+                    <h2>Now Is the Time to Think About Your Small Business Success</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus lobortis augue condimentum
+                        maecenas. Metus at in fames vitae posuere ut vel vulputate....
+                    </p>
+                </div>
+
+                <div class="imgs1">
+                    <div>
+                        <div><img src="./assets/img1.png" alt=""></div>
+                        <small>Craig Bator - 27 Dec 2020</small>
+                        <h2>Penn’s Expanding Political Climate Gears Up Fo 2020 election</h2>
+                    </div>
+                    <div>
+                        <div><img src="./assets/img2.png" alt=""></div>
+                        <small>Craig Bator - 27 Dec 2020</small>
+                        <h2>Things To Look For In A Financial Trading Platform</h2>
+                    </div>
+                    <div>
+                        <div><img src="./assets/img3.png" alt=""></div>
+                        <small>Craig Bator - 27 Dec 2020</small>
+                        <h2>The Only Thing That Overcomes Hard Luck Is Hard Work</h2>
+                    </div>
+                    <div>
+                        <div><img src="./assets/img4.png" alt=""></div>
+                        <small>Craig Bator - 27 Dec 2020</small>
+                        <h2>Success Is not a Good Teacher Failure Makes You Humble</h2>
+                    </div>
+                    <div>
+                        <div><img src="./assets/img5.png" alt=""></div>
+                        <small>Craig Bator - 27 Dec 2020</small>
+                        <h2>At Value-Focused Hotels, the Free Breakfast Gets Bigger</h2>
+                    </div>
+                </div>
+
+                <div class="imgs2">
+                    <div><img src="./assets/img6.png" alt="">
+                        <small>Craig Bator - 27 Dec 2020</small>
+                        <h2>Gluten-Free Almond Cake With Berries</h2>
+                    </div>
+
+                    <div>
+                        <div><img src="./assets/img7.png" alt=""></div>
+                        <small>Craig Bator - 27 Dec 2020</small>
+                        <h2>Enjoy My Favourite Molten Chocolate Cake</h2>
+                    </div>
+
+                    <div>
+                        <div><img src="./assets/img8.png" alt=""></div>
+                        <small>Craig Bator - 27 Dec 2020</small>
+                        <h2>They Back Return To You Kennedy Darlings</h2>
+                    </div>
+                    <div>
+                        <div><img src="./assets/img9.png" alt=""></div>
+                        <small>Craig Bator - 27 Dec 2020</small>
+                        <h2>The Art Of Racing With Speed Motor GP</h2>
+                    </div>
+                    <div>
+                        <div><img src="./assets/img10.png" alt=""></div>
+                        <small>Craig Bator - 27 Dec 2020</small>
+                        <h2>Home Team Takes He Win – NBA 2020</h2>
+                    </div>
+                </div>
+            </div>
         </section>
+
+        <footer>
+            <div>
+                <p>Copyright <a href="https://hijoygirl.com/">@joygirl</a></p>
+            </div>
+        </footer>
 
     </div>
 </body>
