--- a/index.html
+++ b/index.html
@@ -115,70 +115,74 @@
                     </p>
                 </div>
 
-                <div class="imgs1">
-                    <div>
+                <div>
+                    <div class="imgs1">
                         <div><img src="./assets/img1.png" alt=""></div>
                         <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>Penn’s Expanding Political Climate Gears Up Fo 2020 election</h2>
+                        <h2>Penn’s Expanding Political Climate Gears Up Fo <br> 2020 election</h2>
                     </div>
-                    <div>
+                    <div class="imgs2">
                         <div><img src="./assets/img2.png" alt=""></div>
                         <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>Things To Look For In A Financial Trading Platform</h2>
+                        <h2>Things To Look For In A Financial Trading <br> Platform</h2>
                     </div>
-                    <div>
+                    <div class="imgs3">
                         <div><img src="./assets/img3.png" alt=""></div>
                         <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>The Only Thing That Overcomes Hard Luck Is Hard Work</h2>
+                        <h2>The Only Thing That Overcomes Hard Luck Is Hard <br> Work</h2>
                     </div>
-                    <div>
+                    <div class="imgs4">
                         <div><img src="./assets/img4.png" alt=""></div>
                         <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>Success Is not a Good Teacher Failure Makes You Humble</h2>
+                        <h2>Success Is not a Good Teacher Failure Makes You <br> Humble</h2>
                     </div>
-                    <div>
+                    <div class="imgs5">
                         <div><img src="./assets/img5.png" alt=""></div>
                         <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>At Value-Focused Hotels, the Free Breakfast Gets Bigger</h2>
+                        <h2>At Value-Focused Hotels, the Free Breakfast Gets <br> Bigger</h2>
                     </div>
                 </div>
 
-                <div class="imgs2">
-                    <div><img src="./assets/img6.png" alt="">
+                <div>
+                    <div class="imgs6">
+                        <div><img src="./assets/img6.png" alt=""></div>
                         <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>Gluten-Free Almond Cake With Berries</h2>
+                        <h2>Gluten-Free Almond Cake <br> With Berries</h2>
                     </div>
 
-                    <div>
+                    <div class="imgs7">
                         <div><img src="./assets/img7.png" alt=""></div>
                         <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>Enjoy My Favourite Molten Chocolate Cake</h2>
+                        <h2>Enjoy My Favourite Molten <br> Chocolate Cake</h2>
                     </div>
 
-                    <div>
+                    <div class="imgs8">
                         <div><img src="./assets/img8.png" alt=""></div>
                         <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>They Back Return To You Kennedy Darlings</h2>
+                        <h2>They Back Return To You <br> Kennedy Darlings</h2>
                     </div>
-                    <div>
+                
+                    <div class="imgs9">
                         <div><img src="./assets/img9.png" alt=""></div>
                         <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>The Art Of Racing With Speed Motor GP</h2>
+                        <h2>The Art Of Racing With Speed <br> Motor GP</h2>
                     </div>
-                    <div>
+
+                    <div class="imgs10">
                         <div><img src="./assets/img10.png" alt=""></div>
                         <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>Home Team Takes He Win – NBA 2020</h2>
+                        <h2>Home Team Takes He Win <br> – NBA 2020</h2>
                     </div>
                 </div>
             </div>
-        </section>
+    </div>
+    </section>
 
-        <footer>
-            <div>
-                <p>Copyright <a href="https://hijoygirl.com/">@joygirl</a></p>
-            </div>
-        </footer>
+    <footer>
+        <div>
+            <p>Copyright <a href="https://hijoygirl.com/">@joygirl</a></p>
+        </div>
+    </footer>
 
     </div>
 </body>
