--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lovelies -Figma</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -13,7 +14,7 @@
     <div class="container">
         <header>
             <nav class="nav-1">
-                <div>
+                <div class="update">
                     <a href=""><img src="assets/weather.png" alt=""> 15 °c </a>
                     <a href="">New York</a>
                     <span class="date">
@@ -25,11 +26,15 @@
                 </div>
 
                 <div>
-                    <img src="assets/logo.png" alt="xxxx">
+                    <img src="assets/logo.png" alt="">
                 </div>
 
-                <div>
+                <div class="socials">
                     <img src="assets/socials.png" alt="">
+                </div>
+
+                <div class="hamburger">
+                    <img src="assets/list.png" alt="hamburger">
                 </div>
             </nav>
 
@@ -82,8 +87,8 @@
         </section>
 
         <section class="container-2">
-            <div class="heads">
-                <div class="header-2">
+            <div>
+                <div class="heads">
                     <span class="miss">
                         <h3>Don't Miss</h3>
                     </span>
@@ -99,92 +104,89 @@
                     </span>
                 </div>
 
+                <div class="bottom-grid">
+                    <div class="img0">
+                        <div><img src="./assets/img0.png" alt=""></div>
+                        <small>Craig Bator - 27 Dec 2020</small>
+                        <h2>Now Is the Time to Think About Your Small Business Success</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus lobortis augue condimentum
+                            maecenas. Metus at in fames vitae posuere ut vel vulputate....
+                        </p>
+                    </div>
+
+                    <div>
+                        <div class="imgs1">
+                            <div><img src="./assets/img1.png" alt=""></div>
+                            <small>Craig Bator - 27 Dec 2020</small>
+                            <h2>Penn’s Expanding Political Climate Gears Up Fo <br> 2020 election</h2>
+                        </div>
+                        <div class="imgs2">
+                            <div><img src="./assets/img2.png" alt=""></div>
+                            <small>Craig Bator - 27 Dec 2020</small>
+                            <h2>Things To Look For In A Financial Trading <br> Platform</h2>
+                        </div>
+                        <div class="imgs3">
+                            <div><img src="./assets/img3.png" alt=""></div>
+                            <small>Craig Bator - 27 Dec 2020</small>
+                            <h2>The Only Thing That Overcomes Hard Luck Is Hard <br> Work</h2>
+                        </div>
+                        <div class="imgs4">
+                            <div><img src="./assets/img4.png" alt=""></div>
+                            <small>Craig Bator - 27 Dec 2020</small>
+                            <h2>Success Is not a Good Teacher Failure Makes You <br> Humble</h2>
+                        </div>
+                        <div class="imgs5">
+                            <div><img src="./assets/img5.png" alt=""></div>
+                            <small>Craig Bator - 27 Dec 2020</small>
+                            <h2>At Value-Focused Hotels, the Free Breakfast Gets <br> Bigger</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bottom-grid2">
                 <div class="header-3">
                     <a href="" class="recent">Recent</a>
                     <a href="">Trending</a>
                     <a href="">Most Views</a>
                 </div>
-            </div>
-            <div class="bottom-grid">
-                <div class="img0">
-                    <div><img src="./assets/img0.png" alt=""></div>
+
+                <div class="imgs6">
+                    <div><img src="./assets/img6.png" alt=""></div>
                     <small>Craig Bator - 27 Dec 2020</small>
-                    <h2>Now Is the Time to Think About Your Small Business Success</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus lobortis augue condimentum
-                        maecenas. Metus at in fames vitae posuere ut vel vulputate....
-                    </p>
+                    <h2>Gluten-Free Almond Cake <br> With Berries</h2>
                 </div>
 
-                <div>
-                    <div class="imgs1">
-                        <div><img src="./assets/img1.png" alt=""></div>
-                        <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>Penn’s Expanding Political Climate Gears Up Fo <br> 2020 election</h2>
-                    </div>
-                    <div class="imgs2">
-                        <div><img src="./assets/img2.png" alt=""></div>
-                        <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>Things To Look For In A Financial Trading <br> Platform</h2>
-                    </div>
-                    <div class="imgs3">
-                        <div><img src="./assets/img3.png" alt=""></div>
-                        <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>The Only Thing That Overcomes Hard Luck Is Hard <br> Work</h2>
-                    </div>
-                    <div class="imgs4">
-                        <div><img src="./assets/img4.png" alt=""></div>
-                        <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>Success Is not a Good Teacher Failure Makes You <br> Humble</h2>
-                    </div>
-                    <div class="imgs5">
-                        <div><img src="./assets/img5.png" alt=""></div>
-                        <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>At Value-Focused Hotels, the Free Breakfast Gets <br> Bigger</h2>
-                    </div>
+                <div class="imgs7">
+                    <div><img src="./assets/img7.png" alt=""></div>
+                    <small>Craig Bator - 27 Dec 2020</small>
+                    <h2>Enjoy My Favourite Molten <br> Chocolate Cake</h2>
                 </div>
 
-                <div>
-                    <div class="imgs6">
-                        <div><img src="./assets/img6.png" alt=""></div>
-                        <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>Gluten-Free Almond Cake <br> With Berries</h2>
-                    </div>
+                <div class="imgs8">
+                    <div><img src="./assets/img8.png" alt=""></div>
+                    <small>Craig Bator - 27 Dec 2020</small>
+                    <h2>They Back Return To You <br> Kennedy Darlings</h2>
+                </div>
 
-                    <div class="imgs7">
-                        <div><img src="./assets/img7.png" alt=""></div>
-                        <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>Enjoy My Favourite Molten <br> Chocolate Cake</h2>
-                    </div>
+                <div class="imgs9">
+                    <div><img src="./assets/img9.png" alt=""></div>
+                    <small>Craig Bator - 27 Dec 2020</small>
+                    <h2>The Art Of Racing With Speed <br> Motor GP</h2>
+                </div>
 
-                    <div class="imgs8">
-                        <div><img src="./assets/img8.png" alt=""></div>
-                        <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>They Back Return To You <br> Kennedy Darlings</h2>
-                    </div>
-                
-                    <div class="imgs9">
-                        <div><img src="./assets/img9.png" alt=""></div>
-                        <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>The Art Of Racing With Speed <br> Motor GP</h2>
-                    </div>
-
-                    <div class="imgs10">
-                        <div><img src="./assets/img10.png" alt=""></div>
-                        <small>Craig Bator - 27 Dec 2020</small>
-                        <h2>Home Team Takes He Win <br> – NBA 2020</h2>
-                    </div>
+                <div class="imgs10">
+                    <div><img src="./assets/img10.png" alt=""></div>
+                    <small>Craig Bator - 27 Dec 2020</small>
+                    <h2>Home Team Takes He Win <br> – NBA 2020</h2>
                 </div>
             </div>
     </div>
-    </section>
 
-    <footer>
-        <div>
-            <p>Copyright <a href="https://hijoygirl.com/">@joygirl</a></p>
-        </div>
-    </footer>
 
-    </div>
+
+
+
 </body>
 
 </html>
