--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@
                     <h2>Home Team Takes He Win <br> – NBA 2020</h2>
                 </div>
             </div>
+        </section>
+
+        <footer>
+            <p> Copyright<a href="https://www.figma.com/exit?url=https%3A%2F%2Fhijoygirl.com"> @joygirl</a></p>
+        </footer>
     </div>
 
 
