--- a/index.html
+++ b/index.html
@@ -32,24 +32,26 @@
                 <div class="socials">
                     <img src="assets/socials.png" alt="">
                 </div>
-
-                <div class="hamburger">
-                    <img src="assets/list.png" alt="hamburger">
-                </div>
             </nav>
+
+
+            <div class="hamburger">
+                <img src="assets/list.png" alt="hamburger">
+            </div>
+
 
             <nav class="nav-2">
                 <div>
-                    <a class="home">Home</a>
-                    <a>International</a>
-                    <a>Sports</a>
-                    <a>Opinion</a>
-                    <a>Business</a>
-                    <a>Youth</a>
-                    <a>Entertainment</a>
-                    <a>Lifestyle</a>
-                    <a>Pages</a>
-                    <a class="caron">&caron;</a>
+                    <p class="home">Home</p>
+                    <p>International</p>
+                    <p>Sports</p>
+                    <p>Opinion</p>
+                    <p>Business</p>
+                    <p>Youth</p>
+                    <p>Entertainment</p>
+                    <p>Lifestyle</p>
+                    <p>Pages</p>
+                    <p class="caron">&caron;</p>
                     <span class="search-box">
                         <input type="text" name="" id="search" placeholder="Search for">
                         <i class="material-icons">search</i>
@@ -189,8 +191,7 @@
     </div>
 
 
-
-
+    <script src="script.js"></script>
 
 </body>
 
